# borsh

./: .gitignore  AUTHORS  CMakeLists.txt  Cargo.toml  Doxyfile.in  Makefile.am  README.md  config.h.in  configure.ac  makefile  ru.mo
.gear/: borsh.spec  rules
cmake/: FindSQLite3.cmake
examples/: config.yml  email_script  sms_script
i18n/: ru.po
include/: borsh.h  regcache.h  shell.h  system.h
man/: Makefile.am  borsh.1
po/: LINGUAS  POTFILES.in  ru.po
src/: Makefile.am  borsh.c  borsh.sudoers.in  main.rs  passwd.sh  regcache.c  runner.rs  settings.rs  shell.c  system.h
src/storage/: mod.rs  sqlite.rs
src/ui/: cli.rs  dialog.rs
src/verificator/: method.rs  mod.rs
